zoho-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zoho-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: zoho-api.helo-k8s.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zoho-api
            port:
              number: 3002
